--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,13 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "com.android.support:appcompat-v7:${supportVersion}"
     compile "com.android.support:design:${supportVersion}"
+
+    //鸿洋大神的OkHttp封装库
     compile 'com.zhy:okhttputils:2.6.2'
+    //Gson
     compile 'com.google.code.gson:gson:2.7'
+    //Google的图片加载库
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    //歌词显示的视图
     compile 'me.wcy:lrcview:1.4.2'
 }
